--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-    "name": "jimchen/tim-sdk",
+    "name": "harris/tim-sdk",
     "description": "IM Sdk for Tencent Instant Messaging",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "JimChen",
-            "email": "imjimchen@163.com"
+            "name": "Harris",
+            "email": "i@harris.wang"
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.0",
         "ext-json": "*",
         "ext-curl": "*",
-        "monolog/monolog": "^1.0 || ^2.0",
+        "monolog/monolog": "^2.0",
         "pimple/pimple": "^1.0 || ^2.0 || ^3.0",
         "symfony/http-foundation": "^3.0 || ^4.0 || ^5.0",
         "symfony/cache": "^3.0 || ^4.0 || ^5.0",
         "symfony/event-dispatcher": "^4.0 || ^5.0",
         "psr/simple-cache": "^1.0",
         "psr/http-client": "^1.0",
-        "guzzlehttp/guzzle": "^6.5 || ^7.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/psr7": "^1.6 || ^2.0"
     },
     "require-dev": {
